--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,92 @@
   padding: 0;
   margin: 0;
 }
+
+body{
+  height: 100vh;
+}
+
+/* -game.html- */
+.nav{
+  background-color: cadetblue;
+  box-shadow: 0px 0px 100px rgba(255, 250, 20, 0.5);
+  color: lemonchiffon;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  font-size: 3rem;
+  padding: 1rem;
+}
+.newMatch:hover{
+  box-shadow: 0px 0px 100px rgba(255, 250, 20, 0.5);
+}
+.h1{
+  width: 70%;
+}
+.head,
+.guess {
+  background: cadetblue;
+  text-align: center;
+  height: 30vh;
+  width: 37vw;
+  color: #fff;
+  margin: 5rem 0;
+  padding: 10vh;
+  border-color: lemonchiffon; /* Change border color on hover */
+  box-shadow: 0px 0px 100px rgba(255, 250, 20, 0.5); /* Add a slight box shadow on hover */
+}
+.head h1,
+.guess h1 {
+  flex-wrap: wrap;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 4.7rem;
+  cursor: grab;
+}
+input {
+  height: 6vh;
+  width: 20vw;
+  margin: 4rem;
+  font-size: 2rem;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  padding: 1rem;
+  text-wrap:pretty;
+  border: solid cadetblue 3px;
+  border-radius: 6vh;
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0px 0px 100px rgba(255, 250, 20, 0.5);
+}
+.clickk:hover,
+input:hover {
+  box-shadow: 0px 0px 10px rgba(54, 58, 21, 0.5);
+}
+.invisible {
+  display: none;
+}
+.butt {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.clickk {
+  border: 0.3rem lemonchiffon solid;
+  background-color: cadetblue;
+  color: #fff;
+  height: 6rem;
+  width: 15rem;
+  padding: 1rem;
+  border-radius: 4rem;
+  text-align: center;
+  box-shadow: 0px 0px 100px rgba(255, 250, 20, 0.5);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 3rem;
+  cursor: grab;
+}
+
+/* end for GAME.html*/
+
+/*INDEX FILE CSS*/
 .play p {
   text-align: center;
   display: flex;
@@ -14,7 +100,6 @@
   /* animation: neonGlow1 1.5s infinite alternate; */
   animation: fadeIn 1.5s ease forwards infinite;
 }
-
 @keyframes fadeIn {
   0% { opacity: 1; }
   25%{ opacity: 0;}
@@ -27,7 +112,6 @@
     text-shadow: 0 0 5px #3399ff, 0 0 10px #3399ff, 0 0 15px #3399ff;
   }
 }
-
 .playAgain p{
   display: inline;
   color: #ccc41f;
@@ -38,7 +122,6 @@
   display: flex;
   flex-direction: column;
 }
-
 .you-won p {
   display: flex;
   flex-direction: column;
@@ -49,7 +132,6 @@
   transition: all 1s ease-in-out;
   animation: neonGlow 1.5s infinite alternate;
 }
-
 .playAgain{
   text-align: center;
   display: flex;
@@ -68,7 +150,6 @@
   font-size: 5rem;
   padding: 3%;
 }
-
 @keyframes neonGlow {
   from {
     text-shadow: 0 0 10px #a06c19, 0 0 20px #a06c19, 0 0 30px #a06c19;
@@ -77,7 +158,6 @@
     text-shadow: 0 0 5px #792c2c, 0 0 10px #792c2c, 0 0 15px #792c2c;
   }
 }
-
 @keyframes neonGlow1 {
   from {
     text-shadow: 0 0 10px #68629b, 0 0 20px #9b8562, 0 0 30px #9b8562;
@@ -87,166 +167,147 @@
   }
 }
 
-/* homepage animation ends */
-.head,
-.guess {
-  background: cadetblue;
-  text-align: center;
-  height: 30vh;
-  width: 45vw;
-  color: #fff;
-  margin: 5rem 0;
-  padding: 10vh;
-  border-color: lemonchiffon; /* Change border color on hover */
-  box-shadow: 0px 0px 100px rgba(255, 250, 20, 0.5); /* Add a slight box shadow on hover */
-}
+/* INDEX AND END PAGE ends */
 
-.head h1,
-.guess h1 {
-  flex-wrap: wrap;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  font-size: 4rem;
-  cursor: grab;
-}
+/* BROKEN */
+@media screen and (max-width: 1124PX) {
 
-input {
-  height: 6vh;
-  width: 30vw;
-  margin: 4rem;
-  font-size: 2rem;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  padding: 1rem;
-  text-wrap:pretty;
-  border: solid cadetblue 3px;
-  border-radius: 6vh;
-  transition: border-color 0.3s ease, box-shadow 0.3s ease;
-  box-shadow: 0px 0px 100px rgba(255, 250, 20, 0.5);
-}
-
-.clickk:hover,
-input:hover {
-  box-shadow: 0px 0px 10px rgba(54, 58, 21, 0.5);
-}
-.invisible {
-  display: none;
-}
-
-.butt {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.clickk {
-  border: 0.3rem cadetblue solid;
-  background-color: cadetblue;
-  color: #fff;
-  height: 6rem;
-  width: 15rem;
-  padding: 1rem;
-  border-radius: 4rem;
-  text-align: center;
-  border-color: lemonchiffon;
-  box-shadow: 0px 0px 100px rgba(255, 250, 20, 0.5);
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  font-size: 3rem;
-  cursor: grab;
-}
-
-.nav{
-  background-color: cadetblue;
-  box-shadow: 0px 0px 100px rgba(255, 250, 20, 0.5);
-  color: lemonchiffon;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  text-align: center;
-  font-size: 3rem;
-  padding: 1rem;
-}
-
-.newMatch:hover{
-  box-shadow: 0px 0px 100px rgba(255, 250, 20, 0.5);
-}
-
-.h1{
-  width: 70%;
-}
-
-@media screen and (min-width: 768px) {
-  /* Adjustments for .head and .guess */
+  .nav{
+    font-size: 2.7rem;
+  }
+  
   .head,
   .guess {
     height: 30vh;
-    width: 45vw;
-    margin: 5rem 0;
-    padding: 10vh;
-  }
-
-  /* Adjustments for input */
-  input {
-    width: 30vw;
-    margin: 4rem;
-    font-size: 2rem;
-    padding: 1rem;
-  }
-
-  /* Adjustments for .clickk */
-  .clickk {
-    height: 6rem;
-    width: 15rem;
-    padding: 1rem;
-    font-size: 3rem;
-  }
-}
-
-/* Styles for tablets */
-@media screen and (max-width: 767px) {
-  /* Adjustments for .head and .guess */
-  .head,
-  .guess {
-    width: 70vw;
-    margin: 3rem auto;
+    width: 40vw;
+    margin: 4.8rem 0;
     padding: 8vh;
   }
-
-  /* Adjustments for input */
+  .head h1,
+  .guess h1 {
+    font-size: 4rem;
+  }
   input {
-    width: 50vw;
-    margin: 2rem;
+    height: 6vh;
+    width: 25vw;
+    margin: 2.5rem;
     font-size: 1.5rem;
-    padding: 1rem;
+    padding: 0.7rem;
   }
-
-  /* Adjustments for .clickk */
   .clickk {
+    border: 0.2rem lemonchiffon solid;
     height: 5rem;
-    width: 12rem;
-    padding: 0.5rem;
-    font-size: 2rem;
+    width: 13rem;
+    padding: 0.2rem;
+    border-radius: 4rem;
+    font-size: 2.8rem;
   }
+  
 }
 
-/* Styles for mobile screens */
-@media screen and (max-width: 480px) {
+/* TABLETS */
+@media screen and (max-width: 767px) {
+
+  .nav{
+    font-size: 2.25rem;
+  }
+  
   .head,
   .guess {
-    width: 90vw;
-    margin: 2rem auto;
+    height: 25vh;
+    width: 40vw;
+    margin: 4.5rem 0;
+    padding: 8vh;
+  }
+  .head h1,
+  .guess h1 {
+    font-size: 3rem;
+  }
+  input {
+    height: 5vh;
+    width: 25vw;
+    margin: 3rem;
+    font-size: 1.5rem;
+    padding: 0.7rem;
+  }
+  .clickk {
+    border: 0.2rem lemonchiffon solid;
+    height: 4.5rem;
+    width: 11rem;
+    padding: 0.2rem;
+    border-radius: 4rem;
+    font-size: 2.5rem;
+  }
+  
+}
+
+/* PHONE-L */
+@media screen and (max-width: 678px) {
+
+  .nav{
+    font-size: 2.25rem;
+  }
+  
+  .head,
+  .guess {
+    height: 25vh;
+    width: 40vw;
+    margin: 6rem 0;
+    padding: 8vh;
+  }
+  .head h1,
+  .guess h1 {
+    font-size: 3.2rem;
+  }
+  input {
+    height: 5vh;
+    width: 25vw;
+    margin: 2rem;
+    font-size: 1.5rem;
+    padding: 0.7rem;
+  }
+  .clickk {
+    border: 0.2rem lemonchiffon solid;
+    height: 4.5rem;
+    width: 11rem;
+    padding: 0.2rem;
+    border-radius: 4rem;
+    font-size: 2.5rem;
+  }
+  
+}
+/* PHONE-S */
+@media screen and (max-width: 320px) {
+
+  .nav{
+    font-size: 1.2rem;
+  }
+  
+  .head,
+  .guess {
+    height: 20vh;
+    width: 40vw;
+    margin: 3.4rem 0;
     padding: 5vh;
   }
-
-  input {
-    width: 80vw;
-    margin: 1rem;
-    font-size: 1.2rem;
-    padding: 0.5rem;
+  .head h1,
+  .guess h1 {
+    font-size: 2rem;
   }
-
+  input {
+    height: 5vh;
+    width: 23vw;
+    margin: 1rem;
+    font-size: 1rem;
+    padding: 0.1rem;
+  }
   .clickk {
-    height: 4rem;
-    width: 10rem;
-    padding: 0.3rem;
+    border: 0.2rem lemonchiffon solid;
+    height: 3rem;
+    width: 7rem;
+    padding: 0.2rem;
+    border-radius: 4rem;
     font-size: 1.5rem;
   }
+  
 }
