--- a/CSS/style.css
+++ b/CSS/style.css
@@ -135,20 +135,18 @@ input:hover {
 .playAgain{
   text-align: center;
   display: flex;
-  align-items:flex-start;
+  align-items:center;
   justify-content: center;
   font-size: 3rem;
-  padding: 3%;
-  /* height: 100vh; */
+  height: 10vh;
 }
 .you-won {
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 92.5vh;
+  line-height: 90vh;
   font-size: 5rem;
-  padding: 3%;
 }
 @keyframes neonGlow {
   from {
